2002-06-12  Christophe Merlet  <christophe@merlet.net>

	* Makefile.am: Add $DESTDIR variable.

2002-06-04  George Lebl <jirka@5z.com>

	* logview.c: use _UI_SUBTREE instead of _UI_SUBTREE_STOCK since 
	that makes translations actually work. _UI_SUBTREE_STOCK means
	that the string comes from libgnomeui which in this case it 
	doesn't.

2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* Makefile.am: Update for #83627.

2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* Makefile.am: Fix GNOMELOCALEDIR to point to correct
	place. Fixes #83627.

2002-05-31  Glynn Foster <glynn.foster@sun.com>

	* monitor.c: Remove ugly pangoification in the 
	monitor dialog.

2002-05-31  Glynn Foster <glynn.foster@sun.com>
	
	* Makefile.am: Enable help again. Fixes #83518.

2002-05-25  Glynn Foster <glynn.foster@sun.com>

	* logview.c, actions.c: Some focus issues. Hum, we really
	need to get mnemonics going here.

2002-05-25  Narayana Pattipati <narayana.pattipati@wipro.com>

	* logview.c: Treeview fix to prevent parent and child being
	created for first action entry. Fixes #81942.

2002-05-23  Aruna P R <aruna.pou@wipro.com>

	* logview.c: Disable multiple openings of the same file. Fixes 
	#75121.

2002-05-23  Narayana Pattipati <narayana.pattipati@wipro.com>

	* actions.c: Make sure we save the description in the actions
	dialog. Fixes #82334.

2002-15-20 Glynn Foster <glynn.foster@sun.com>

	* Makefile.am: Diable docs until they are fixed - dtd validation
	problems with scrollkeeper.dtd.

Fri May 17 10:09:46 2002  George Lebl <jirka@5z.com>

	* config.c: add note to translators about fonts, especially about
	  Helvetica vs asian fonts

	* info.c, zoom.c: fix crashes on window closing, also add more
	  elaborate logic for figuring out the size of the label area,
	  still quite stupid, but now it gets it wrong by getting more space
	  rather then less which is nicer.  Also better get single char
	  width info in an uglier, more elaborate and hackish way but