@@ -1,3 +1,12 @@
+2002-06-12  Narayana Pattipati <narayana.pattipati@wipro.com>
+
+        * monitor.c: In mon_read_new_lines function, as new lines are read,
+        update the current position and start reading next set of lines from 
+        the new position.
+
+        * logrtns.c: In ReadPageDown function fixed a crash when the lines
+        read are more than ten. Bug#84084.
+
 2002-06-12  Christophe Merlet  <christophe@merlet.net>
 
 	* Makefile.am: Add $DESTDIR variable.
